syntax = "proto3";
option java_multiple_files = true;
package com.joao.products;

message ProductRequest {
  string sku = 1;
}

message ProductResponse {
  string sku = 1;
  string designation = 2;
  string description = 3;
  string image = 4;
  int32 status = 5;
}

service ProductService {
  rpc getProduct(ProductRequest) returns (ProductResponse);
}
